Adjusted for new database

--- a/createNeo4jDatabase.ipynb
+++ b/createNeo4jDatabase.ipynb
@@ -36,9 +36,9 @@
    "outputs": [],
    "source": [
     "neo4j_db_name = \"neo4j - default\"\n",
-    "neo4j_url = \"neo4j://infosys5.f4.htw-berlin.de:7687\"\n",
+    "neo4j_url = \"neo4j://141.45.146.164:7687\"\n",
     "neo4j_user = \"neo4j\"\n",
-    "neo4j_pw =  \"decide-nissan-pegasus-vertigo-tahiti-1341\"\n",
+    "neo4j_pw =  \"super-super-secret-password\"\n",
     "\n",
     "db_name_mongo = \"sentiment\"\n",
     "mongo_url = \"mongodb://readonly:r34d0nly!@141.45.146.163:27017\""
